<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:src="@drawable/risibank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/backspacebtn"
            app:layout_constraintStart_toEndOf="@+id/searchbtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/spacebtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/shape_button"
            android:contentDescription="@string/keyboard_risibank_space"
            android:src="@drawable/ic_space_bar"
            android:tint="@color/color_button"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toStartOf="@+id/returnbtn"
            app:layout_constraintStart_toEndOf="@+id/backspacebtn"
            app:layout_constraintTop_toTopOf="@+id/logo" />

        <ImageButton
            android:id="@+id/searchbtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/shape_button"
            android:src="@drawable/ic_search"
            android:tint="@color/color_button"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toStartOf="@+id/logo"
            app:layout_constraintStart_toEndOf="@+id/donatebtn"
            app:layout_constraintTop_toTopOf="@+id/logo" />

        <ImageButton
            android:id="@+id/donatebtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/shape_button"
            android:src="@drawable/ic_money"
            android:tint="@color/color_button"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toStartOf="@+id/searchbtn"
            app:layout_constraintStart_toEndOf="@+id/addbtn"
            app:layout_constraintTop_toTopOf="@+id/logo" />

        <ImageButton
            android:id="@+id/backspacebtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/shape_button"
            android:src="@drawable/ic_backspace"
            android:tint="@color/color_button"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toStartOf="@+id/spacebtn"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="@+id/logo" />

        <ImageButton
            android:id="@+id/returnbtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/shape_button"
            android:src="@drawable/ic_keyboard_return"
            android:tint="@color/color_button"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spacebtn"
            app:layout_constraintTop_toTopOf="@+id/logo" />

        <ImageButton
            android:id="@+id/addbtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/shape_button"
            android:src="@drawable/ic_add"
            android:tint="@color/color_button"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toStartOf="@+id/donatebtn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerInner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <TextView
        android:id="@+id/favorisText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/keyboard_risibank_favoris_tip"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/recycler">

        <Button
            android:id="@+id/nouveauxbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/shape_naked_button"
            android:stateListAnimator="@null"
            android:text="@string/keyboard_risibank_nouveaux"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/populairesbtn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/populairesbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/shape_naked_button"
            android:stateListAnimator="@null"
            android:text="@string/keyboard_risibank_populaires"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/favorisbtn"
            app:layout_constraintStart_toEndOf="@+id/nouveauxbtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/aleatoiresbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/shape_naked_button"
            android:stateListAnimator="@null"
            android:text="@string/keyboard_risibank_aleatoires"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/favorisbtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/favorisbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/shape_naked_button"
            android:stateListAnimator="@null"
            android:text="@string/keyboard_risibank_favoris"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/aleatoiresbtn"
            app:layout_constraintStart_toEndOf="@+id/populairesbtn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

